--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "^30.0.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.17.0"
   }
